--- a/hangman/index.html
+++ b/hangman/index.html
@@ -1,13 +1,53 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta
+      property="og:title"
+      content="Brewer's Hangman - Test Your Brewing Knowledge!"
+    />
+    <meta
+      property="og:description"
+      content="Guess the brewing-related word before time runs out! How well do you know your brewing terms?"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://yourwebsite.com/brewers-hangman" />
+    <meta property="og:image" content="https://yourwebsite.com/hangman.svg" />
+
+    <!-- Optional but recommended tags -->
+    <meta property="og:site_name" content="Brewer's Hangman" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
+    <!-- Twitter card tags for better preview on Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Brewer's Hangman - Test Your Brewing Knowledge!"
+    />
+    <meta
+      name="twitter:description"
+      content="Can you guess the brewing term before it's too late? Challenge yourself in this fun, brewing-themed hangman game!"
+    />
+    <meta name="twitter:image" content="https://yourwebsite.com/hangman.svg" />
+
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/hangman.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
+    <title>Brewer's Hangman</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <svg
+        width="100%"
+        height="100%"
+        class="hangman-svg"
+        id="hangman-svg"
+        viewBox="0 0 64 96"
+      ></svg>
+      <div id="word-container" class="word-container"></div>
+      <div id="button-container"></div>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
